# lush

./: .actrc  .env  .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.linux  Dockerfile.windows  LICENSE  build.sh  flake.nix  github-build.sh  nfpm-rhel.yaml  nfpm-suse.yaml  nfpm.yaml  procursus-bootstrap.sh
.github/workflows/: ci.yml
editors/vscode/: package.json
editors/vscode/src/: extension.js
editors/vscode/syntaxes/: lush.tmLanguage.json
lsp/: Cargo.toml
lsp/src/: main.rs
scripts/: procursus_bootstrap.sh
src/: lib.rs  lush.rs  main.rs  repl.rs  shell.rs
tests/: test.fish  test.lua  test.lush  test.ps1  test.sh  test_all.lua  test_native_tools.lua
wix/: lush.wxs
