[package]
name = "lush"
version = "0.1.0"
edition = "2021"

[dependencies]
mlua = { version = "0.11.6", features = ["lua54", "vendored"] }
rustyline = { version = "18.0.0", features = ["derive"] }
yash-env = "0.15.1"
yash-semantics = "0.17.0"
yash-syntax = "0.22.0"
yash-builtin = "0.18.1"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[workspace]
members = [
    "lsp"
]
